--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("../images/imge.jpeg");
+  background-image: url("../images/pexel2.jpeg");
     background-size: cover;
   color: white;
   height: 100vh;
@@ -32,4 +32,9 @@ font-family: 'Sigmar One', cursive;
 }
 .row{
   margin-left:10%;
+}
+#h{
+  color: white;
+  font-family: 'Sigmar One', cursive;
+
 }
