--- a/css/styles.css
+++ b/css/styles.css
@@ -47,3 +47,13 @@ font-family: 'Sigmar One', cursive;
   box-shadow: 3px 3px 10px 3px skyblue;
   background-color: black;
 }
+#receipt {
+  width: 400px;
+  display: none;
+  border: 1px double skyblue;
+  border-radius: 10px;
+  padding: 20px 10px;
+  margin: 0 auto 50px auto;
+  background-color: #ddd;
+  box-shadow: 5px 5px 15px #333;
+}
