styled the ingridient

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,3 +57,31 @@ font-family: 'Sigmar One', cursive;
   background-color: #ddd;
   box-shadow: 5px 5px 15px #333;
 }
+.ingredients {
+  color: darkblue;
+  font-style: oblique;
+  font-size: 85%;
+}
+
+.receiptRow {
+  margin: 10px 0px;
+  border-bottom: 1px dashed skyblue;
+}
+
+.costs {
+  position: absolute;
+  right: 15px;
+}
+
+#total {
+  font-weight: bolder;
+  padding: 10px;
+  margin-top: 30px;
+  border-top: 1px dotted grey;
+  border-bottom: 1px dotted grey;
+}
+
+#orderAgain {
+  margin: auto;
+  display: none;
+}
